tests/negative/pattern/mut-underscore.orng
fn main() -> Int
    let mut _ : Int = 4
    4